# Web_dev_ws

./: .gitignore  README.md  main.py  pyproject.toml  render.yaml  test_api.py  test_tags.py
app/: auth.py  config.py  database.py  main.py  models.py
app/routers/: auth.py  comments.py  likes.py  posts.py  tags.py
artifacts/: implementation_plan.md  implementation_plan_tags.md  task.md  walkthrough.md
report/: api_driven.md  codebase_review.md  crud_explain.md  deploy_render.md  schema_comparison.md  web_devel.md
static/css/: style.css
static/js/: app.js
templates/: index.html  login.html  post_detail.html  register.html
